@@ -2,6 +2,8 @@ package com.agh.hydra.referral.service;
 
 import com.agh.hydra.common.model.UserId;
 import com.agh.hydra.referral.model.ReferralAnnouncement;
+import com.agh.hydra.referral.model.ReferralApplication;
+import com.agh.hydra.referral.model.ReferralId;
 import com.agh.hydra.referral.request.CreateReferralApplicationRequest;
 import com.agh.hydra.referral.request.CreateReferralRequest;
 import com.agh.hydra.referral.request.ReferralAnnouncementFilterRequest;
@@ -11,6 +13,7 @@ import org.springframework.data.domain.Pageable;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
+import java.util.List;
 
 public interface IReferralService {
 
@@ -41,9 +44,19 @@ public interface IReferralService {
 
     /**
      * Creates referral announcement application
+     *
      * @param request apply request
-     * @param userId applier identifier
+     * @param userId  applier identifier
      */
     void applyForReferralAnnouncement(@Valid @NotNull CreateReferralApplicationRequest request,
                                       @Valid @NotNull UserId userId);
+
+    /**
+     * Get referral application list
+     *
+     * @param referralId referral announcement identifier
+     * @param userId     author identifier
+     */
+    List<ReferralApplication> getReferralApplications(@Valid @NotNull ReferralId referralId,
+                                                      @Valid @NotNull UserId userId);
 }
